feat: add motivation section styles

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </div>
               <img
                 class="motivation-card-image"
-                src="./images/motivation/1.jpg"
+                src="./assets/images/motivation/1.jpg"
                 alt="A man pulling himself up on a horizontal bar"
                 width="518"
                 height="760"
@@ -135,7 +135,7 @@
               </div>
               <img
                 class="motivation-card-image"
-                src="./images/motivation/2.jpg"
+                src="./assets/images/motivation/2.jpg"
                 alt="Man with dumbbells"
                 width="518"
                 height="760"
